@@ -3,6 +3,8 @@
 - Options for channel numbers in slim pvr guide
 - Addition of top menu in pvr guide
 - Add quick jump for PVR
+- Add title labels to pvr widgets
+- Fixes for landscape pvr widget icons
 
 0.9.47
 - NextAired view options
